editor/libeditor/EditorDOMPoint.h
@@ -1030,7 +1030,8 @@ class EditorDOMPointBase final {
                                   const SelfType& aDOMPoint) {
     aStream << "{ mParent=" << aDOMPoint.mParent.get();
     if (aDOMPoint.mParent) {
-      aStream << " (" << *aDOMPoint.mParent << ")";
+      aStream << " (" << *aDOMPoint.mParent
+              << ", Length()=" << aDOMPoint.mParent->Length() << ")";
     }
     aStream << ", mChild=" << aDOMPoint.mChild.get();
     if (aDOMPoint.mChild) {
